--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,11 @@ jobs:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
      
+     
       uses: actions/setup-java@v3 
       with: 
-        java-version: 14 
+        java-version: 14
+        distribution: 'temurin'
 
     - name: Build project with Maven 
       run: mvn -B package --file pom.xml
